@@ -5,7 +5,8 @@ import net.minecraft.client.gui.screen.ingame.BookEditScreen;
 import net.minecraft.entity.player.PlayerEntity;
 import net.minecraft.item.Item;
 import net.minecraft.item.ItemStack;
-import net.minecraft.sound.SoundEvents;
+import net.minecraft.server.MinecraftServer;
+import net.minecraft.server.command.ServerCommandSource;
 import net.minecraft.util.Hand;
 import net.minecraft.util.TypedActionResult;
 import net.minecraft.world.World;
@@ -33,7 +34,6 @@ public class DeathNoteItem extends Item {
     }
 
     public static class CustomBookEditScreen extends BookEditScreen {
-        private final ItemStack bookStack;
         private static final Field pagesField;
 
         static {
@@ -47,7 +47,6 @@ public class DeathNoteItem extends Item {
 
         public CustomBookEditScreen(PlayerEntity player, ItemStack book, Hand hand) {
             super(player, book, hand);
-            this.bookStack = book;
         }
 
         @Override
@@ -59,31 +58,26 @@ public class DeathNoteItem extends Item {
                 List<String> bookText = (List<String>) pagesField.get(this);
 
                 if (!bookText.isEmpty()) {
-                    String victimName = bookText.get(bookText.size() - 1).trim();
+                    String victimName = bookText.getLast().trim();
                     if (!victimName.isEmpty()) {
-                        MinecraftClient client = MinecraftClient.getInstance();
-                        if (client.getNetworkHandler() != null) {
-                            // Schedule effects and death with delays
-                            client.execute(() -> {
-                                // Initial effect
-                                client.getNetworkHandler().sendCommand("title " + victimName + " times 20 60 20");
-                                client.getNetworkHandler().sendCommand("title " + victimName + " subtitle {\"text\":\"Death Note claims another soul...\",\"color\":\"red\"}");
-                                client.getNetworkHandler().sendCommand("title " + victimName + " title {\"text\":\"Your name was written\",\"color\":\"dark_red\"}");
+                        MinecraftServer server = MinecraftClient.getInstance().getServer();
+                        if (server != null) {
+                            ServerCommandSource source = server.getCommandSource();
+                            server.getCommandManager().executeWithPrefix(source, "title " + victimName + " times 20 60 20");
+                            server.getCommandManager().executeWithPrefix(source, "title " + victimName + " subtitle {\"text\":\"Death Note claims another soul...\",\"color\":\"red\"}");
+                            server.getCommandManager().executeWithPrefix(source, "title " + victimName + " title {\"text\":\"Your name was written\",\"color\":\"dark_red\"}");
+                            new Thread(() -> {
+                                try {
+                                    Thread.sleep(5000);
+                                        // Death effects
+                                    server.getCommandManager().executeWithPrefix(source, "execute at " + victimName + " run playsound minecraft:entity.lightning_bolt.thunder player @a ~ ~ ~ 1 1");
+                                    server.getCommandManager().executeWithPrefix(source, "execute at " + victimName + " run particle minecraft:smoke ~ ~1 ~ 0.5t 0.5 0.5 0.1 100");
+                                    server.getCommandManager().executeWithPrefix(source, "kill " + victimName);
+                                } catch (InterruptedException e) {
+                                    LOGGER.error("Death Note effect interrupted", e);
+                                }
+                            }).start();
 
-                                // Schedule death effect after 5 seconds
-                                new Thread(() -> {
-                                    try {
-                                        Thread.sleep(5000);
-                                        client.execute(() -> {
-                                            // Death effects
-                                            client.getNetworkHandler().sendCommand("execute at " + victimName + " run particle minecraft:smoke ~ ~1 ~ 0.5 0.5 0.5 0.1 100");
-                                            client.getNetworkHandler().sendCommand("kill " + victimName);
-                                        });
-                                    } catch (InterruptedException e) {
-                                        LOGGER.error("Death Note effect interrupted", e);
-                                    }
-                                }).start();
-                            });
                         }
                     }
                 }
